--- a/style.css
+++ b/style.css
@@ -134,6 +134,31 @@ aside .concat dt {
 aside .concat dd {
   width: 80%;
 }
+aside .blog {
+  /* padding: 0; */
+}
+aside .blog a {
+  display: block;
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 4px;
+}
+aside .zhihu {
+  background: #0084ff;
+  color: #fff;
+  letter-spacing: 4px;
+}
+aside .zhihu:hover {
+  background: #0077e6;
+}
+aside .github {
+  background: #24292e;
+  color: #fff;
+  margin-top: 10px;
+}
 
 main .main-layout {
   width: 94%;
