--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,144 +1,12 @@
-// 页面布局
-.layout {
-  border: 1px solid red;
-  max-width: 900px;
-  margin: 0 auto;
-
-  > header {
-    width: 100%;
-    background: #3c3c3c;
-    padding: 50px 0 20px 0;
-  }
-
-  > main {
-    border: 1px solid green;
-    height: 300px;
-  }
-
-  > section {
-    border: 1px solid blue;
-    height: 300px;
-  }
-
-  > footer {
-    border: 1px solid orange;
-    height: 300px;
-  }
-}
-
-// 顶部
-header {
-  color: #fff;
-  text-align: center;
-  > h1 {
-    font-size: 30px;
-    letter-spacing: 10px;
-    padding-left: 10px; margin-bottom: 4px;
-  }
-}
-
-/*header > p {*/
-/*  font-size: 14px;*/
-/*  margin-bottom: 4px;*/
-/*}*/
-
-/*@media (max-width: 768px) {*/
-/*  header > h1 {*/
-/*    text-align: right;*/
-/*    margin-right: 40px;*/
-/*  }*/
-
-/*  header > p {*/
-/*    text-align: right;*/
-/*    margin-right: 40px;*/
-/*  }*/
-/*}*/
-
-
-/*aside {*/
-/*  width: 240px;*/
-/*  background: #fff;*/
-/*}*/
-/*!*main {*!*/
-/*!*  flex: 1;*!*/
-/*!*  background: #fff;*!*/
-/*!*}*!*/
-/*@media (max-width: 768px) {*/
-/*  aside {*/
-/*    width: 100%;*/
-/*  }*/
-/*}*/
+@import "fonts.css";
+@import "layout";
+@import "header";
+@import "main";
 
 
 
 
-/*aside {*/
-/*  border-right: 1px solid #ccc;*/
-/*}*/
 
-/*@media (max-width: 768px) {*/
-/*  aside {*/
-/*    border-right: none;*/
-/*  }*/
-/*}*/
-
-/*aside .aside-layout {*/
-/*  width: 90%;*/
-/*  height: calc(100% + 75px);*/
-/*  margin: 0 auto;*/
-/*  margin-top: -75px;*/
-/*}*/
-
-/*@media print {*/
-/*  aside .aside-layout,*/
-/*  aside .aside-layout section dl {*/
-/*    font-size: 20px;*/
-/*  }*/
-/*}*/
-
-/*aside .avatar {*/
-/*  display: block;*/
-/*  width: 150px;*/
-/*  height: 150px;*/
-/*  border-radius: 50%;*/
-/*  margin: 0 auto;*/
-/*}*/
-
-/*@media (max-width: 768px) {*/
-/*  aside .avatar {*/
-/*    display: block;*/
-/*    width: 150px;*/
-/*    height: 150px;*/
-/*    border-radius: 50%;*/
-/*    margin-left: 0;*/
-/*  }*/
-/*}*/
-
-/*section {*/
-/*  border-bottom: 1px solid #ccc;*/
-/*  margin-top: 30px;*/
-/*  padding-bottom: 20px;*/
-/*}*/
-
-/*section h2 {*/
-/*  color: #5c99ca;*/
-/*  font-size: 16px;*/
-/*  margin-bottom: 14px;*/
-/*}*/
-
-/*section dl {*/
-/*  display: flex;*/
-/*  flex-wrap: wrap;*/
-/*  font: 14px/1.5 Arial;*/
-/*}*/
-
-/*section dt {*/
-/*  width: 50%;*/
-/*}*/
-
-/*aside dt span {*/
-/*  float: right;*/
-/*}*/
 
 /*section dd {*/
 /*  width: 50%;*/
@@ -157,42 +25,9 @@ header {
 /*  }*/
 /*}*/
 
-/*aside .information dt {*/
-/*  height: 22px;*/
-/*  line-height: 22px;*/
-/*}*/
 
-/*aside .information i {*/
-/*  font-style: normal;*/
-/*  display: inline-block;*/
-/*  width: 4em;*/
-/*  text-align: justify;*/
-/*  height: 21px;*/
-/*  line-height: 20px;*/
-/*  overflow: hidden;*/
-/*}*/
 
-/*aside .information i::after {*/
-/*  content: "";*/
-/*  width: 100%;*/
-/*  display: inline-block;*/
-/*}*/
 
-/*aside .skills dl {*/
-/*  justify-content: space-between;*/
-/*  align-items: center;*/
-/*}*/
-
-/*aside .skills dt {*/
-/*  width: 30%;*/
-/*}*/
-
-/*aside .skills dd {*/
-/*  height: 4px;*/
-/*  background: #ccc;*/
-/*  width: 60%;*/
-/*  padding: 0;*/
-/*}*/
 
 /*@media (max-width: 768px) {*/
 /*  aside .skills dt {*/
@@ -214,28 +49,7 @@ header {
 /*  background: #000;*/
 /*}*/
 
-/*aside .concat dt {*/
-/*  width: 20%;*/
-/*  padding-left: 20px;*/
-/*  margin-bottom: 4px;*/
-/*}*/
 
-/*aside .concat dd {*/
-/*  width: 80%;*/
-/*}*/
-
-/*@media (max-width: 768px) {*/
-/*  aside .concat dt {*/
-/*    width: 20%;*/
-/*    padding-left: 20px;*/
-/*    margin-bottom: 4px;*/
-/*  }*/
-
-/*  aside .concat dd {*/
-/*    width: 80%;*/
-/*    padding-left: 0;*/
-/*  }*/
-/*}*/
 
 /*aside .blog a {*/
 /*  display: block;*/
@@ -291,6 +105,50 @@ header {
 /*    color: #fff;*/
 /*  }*/
 /*}*/
+
+
+/*!*main {*!*/
+/*!*  flex: 1;*!*/
+/*!*  background: #fff;*!*/
+/*!*}*!*/
+/*@media (max-width: 768px) {*/
+/*  aside {*/
+/*    width: 100%;*/
+/*  }*/
+/*}*/
+
+
+
+
+/*aside {*/
+/*  border-right: 1px solid #ccc;*/
+/*}*/
+
+/*@media (max-width: 768px) {*/
+/*  aside {*/
+/*    border-right: none;*/
+/*  }*/
+/*}*/
+
+/*aside .aside-layout {*/
+/*  width: 90%;*/
+/*  height: calc(100% + 75px);*/
+/*  margin: 0 auto;*/
+/*  margin-top: -75px;*/
+/*}*/
+
+/*@media print {*/
+/*  aside .aside-layout,*/
+/*  aside .aside-layout section dl {*/
+/*    font-size: 20px;*/
+/*  }*/
+/*}*/
+
+
+
+
+
+
 
 /*main .main-layout {*/
 /*  width: 94%;*/
