--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -1,18 +1,19 @@
 header {
   color: #fff;
   text-align: center;
-  padding: 50px 0 20px 0;
+  padding: 20px 0;
 
   > h1 {
     font-size: 30px;
-    letter-spacing: 10px;
-    padding-left: 10px;
-    margin-bottom: 4px;
+    font-family: "YADdv1J3R-M", sans-serif;
+    // letter-spacing: 10px;
+    // padding-left: 10px;
+    // margin-bottom: 4px;
   }
 
   > p {
     font-size: 14px;
-    margin-bottom: 4px;
+    // margin-bottom: 4px;
   }
 
   // @media (max-width: 768px) {
