--- a/src/style/fonts.css
+++ b/src/style/fonts.css
@@ -1,17 +1,17 @@
-@font-face {
-  font-family: "YAD85pph3W4";
-  src: url("../fonts/YAD85pph3W4.woff") format("woff");
-}
+/*@font-face {*/
+/*  font-family: "YAD85pph3W4";*/
+/*  src: url("../fonts/YAD85pph3W4.woff") format("woff");*/
+/*}*/
 
 @font-face {
   font-family: "YAD85jmEETg";
   src: url("../fonts/YAD85jmEETg.woff") format("woff");
 }
 
-@font-face {
-  font-family: "YADdv1J3R-M";
-  src: url("../fonts/YADdv1J3R-M.woff") format("woff");
-}
+/*@font-face {*/
+/*  font-family: "YADdv1J3R-M";*/
+/*  src: url("../fonts/YADdv1J3R-M.woff") format("woff");*/
+/*}*/
 
 @font-face {
   font-family: "JS-Sirium-Normal";
